--- a/Website/index.html
+++ b/Website/index.html
@@ -63,7 +63,7 @@
 					<div class="col-lg-12">
 						<img class="img-responsive" src="img/trump2.png" alt="">
 						<div class="intro-text">
-							<span class="name">Tscrump Weather Station</span>
+							<span class="name">Tscrump weerrrrdfdfdfdfdf Station</span>
 							<hr class="star-light">
 							<span class="skills">Make Weather Stations Great Again!</span>
 						</div>
