--- a/Website/index.html
+++ b/Website/index.html
@@ -63,7 +63,7 @@
 					<div class="col-lg-12">
 						<img class="img-responsive" src="img/trump2.png" alt="">
 						<div class="intro-text">
-							<span class="name">Tscrump weather Station</span>
+							<span class="name">Tscrump Weather Station</span>
 							<hr class="star-light">
 							<span class="skills">Make Weather Stations Great Again!</span>
 						</div>
@@ -129,9 +129,9 @@
 						Humidity Sensor and a large scale Data Network. </p>
 					</div>
 					<div class="col-lg-4">
-						<p> Wether you are a granny or a little kid, everyone likes this wether station.
+						<p> Wether you are a granny or a little kid, everyone likes this weather station.
 						Control it at home or do it while being abroad.
-						You can check the wether in your home town using the LORA network. </p>
+						You can check the weather in your home town using the LORA network. </p>
 					</div>
 				</div>
 			</div>
