--- a/Website/index.html
+++ b/Website/index.html
@@ -129,8 +129,9 @@
 						Humidity Sensor and a large scale Data Network. </p>
 					</div>
 					<div class="col-lg-4">
-						<p> Wether you are a granny or a little kid, everyone likes this weather station.
-						Control it at home or do it while being abroad.
+						<p> Wether you are a granny or a little kid, everyone likes to see what kind of
+						weather there is comming.
+						Control the weather station at home or do it while being abroad.
 						You can check the weather in your home town using the LORA network. </p>
 					</div>
 				</div>
