--- a/Website/index.html
+++ b/Website/index.html
@@ -186,7 +186,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12">
-							Copyright &copy; Tscrump Group
+							Copyright &copy; Tscrump B.V.
 								<br>
 							#Saxion2016
 						</div>
