--- a/Website/index.html
+++ b/Website/index.html
@@ -132,7 +132,7 @@
 						<p> Wether you are a granny or a little kid, everyone likes to see what kind of
 						weather there is comming.
 						Control the weather station at home or do it while being abroad.
-						You can check the weather in your home town using the LORA network. </p>
+						You can check the weather in your home town by using this site wich uses the LORA network. </p>
 					</div>
 				</div>
 			</div>
