--- a/Website/index.html
+++ b/Website/index.html
@@ -145,7 +145,7 @@
 					<div class="col-lg-12 text-center">
 						<h2>Documentation</h2>
 						<hr class="star-primary">
-						<h5> Are you interested in our documentation for this Project, get it here! </h5>
+						<h5> Are you interested in our documentation for this Project, get it right here! </h5>
 					</div>
 				</div>
 				<br>
