--- a/Website/index.html
+++ b/Website/index.html
@@ -100,7 +100,7 @@
 			<br>
 			<center>
 				<h5>Brightness</h5>
-					<img src="GraphBrightness.php" scale="0" align="middle">
+					<img src="GraphBrightness2.php" scale="0" align="middle">
 					</img>
 			</center> <!-- Temperature Image -->
 			<br>
