Changed the url's because the picture's weren't working.

--- a/Website/index.html
+++ b/Website/index.html
@@ -63,7 +63,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<img class="img-responsive" src="img/trump2.png" alt="">
+						<img class="img-responsive" src="../img/profile.png" alt="">
 						<div class="intro-text">
 							<span class="name">Tscrump Weather Station</span>
 							<hr class="star-light">
@@ -91,10 +91,10 @@
 				<ul>
 					<div id="ImageShow" style="width: 100%;height:100%">
 				<ul>
-					<li><img src="Graphs/GraphTemperature.php"  /></li>
-					<li><img src="Graphs/GraphBrightness.php"  /></li>
-					<li><img src="Graphs/GraphHumidity.php"  /></li>
-					<li><img src="Graphs/GraphPressure.php"  /></li>
+					<li><img src="../graphs/GraphTemperature.php"  /></li>
+					<li><img src="./graphs/GraphBrightness.php"  /></li>
+					<li><img src="./graphs/GraphHumidity.php"  /></li>
+					<li><img src="./graphs/GraphPressure.php"  /></li>
 				</ul>
 			<span class="button prevButton"></span>
 		<span class="button nextButton"></span>
