--- a/Website/index.html
+++ b/Website/index.html
@@ -75,7 +75,7 @@
 		</header>
 
 		<!-- Graph's section. -->
-		<section id="weather">
+		<section id="weather" style="Height:1000px">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 text-center">
@@ -89,7 +89,7 @@
 			<center>
 			<div id="slideshow">
 				<ul>
-					<div id="ImageShow" style="width: 100%;height:100%">
+					<div id="ImageShow" style="width:100%">
 				<ul>
 					<li><img src="../graphs/GraphTemperature.php"  /></li>
 					<li><img src="./graphs/GraphBrightness.php"  /></li>
