--- a/Website/index.html
+++ b/Website/index.html
@@ -51,6 +51,9 @@
 						<li class="page-scroll">
 							<a href="#Documentation">Documentation</a>
 						</li>
+						<li class="page-scroll">
+							<a href="https://github.com/diondokter/Tscrump-Weather-Station/wiki">Wiki</a>
+						</li>
 					</ul>
 				</div>
 				<!-- /.navbar-collapse -->
@@ -153,7 +156,11 @@
 						You can check the wether in your home town using the LORA network. </p>
 					</div>
 				</div>
+				<br>
+				<br>
+				<br>
 			</div>
+			
 		</section>
 
 		
@@ -163,7 +170,7 @@
 					<div class="col-lg-12 text-center">
 						<h2>Documentation</h2>
 						<hr class="star-primary">
-						<h5> Are you interested in our documentation for this Project, get it here! </h5>
+						<h5> Are you interested in our documentation for this Project, download it here!</h5>
 					</div>
 				</div>
 				<br>
@@ -180,7 +187,7 @@
 			</div>
 			<br>				
 			<br>
-			<br>		
+			<br>
 		</section>
 		
 
