--- a/Website/index.html
+++ b/Website/index.html
@@ -185,7 +185,14 @@
 					</div>
 				</div>
 			</div>
-			<br>				
+			<br>
+			<div class="row">
+					<div class="col-lg-8 col-lg-offset-2 text-center">
+						<a href="https://github.com/diondokter/Tscrump-Weather-Station/wiki" class="btn btn-lg btn-outline">
+							<i class="fa"></i> Go to Wiki
+						</a>
+					</div>
+				</div>
 			<br>
 			<br>
 		</section>
