--- a/Website/index.html
+++ b/Website/index.html
@@ -42,16 +42,16 @@
 						<li class="hidden">
 							<a href="#page-top"></a>
 						</li>
-						<li class="page-scroll">
+						<li class="page-scroll"> <!-- Option for weather section -->
 							<a href="#weather">Weather</a>
 						</li>
-						<li class="page-scroll">
+						<li class="page-scroll"> <!-- Option for about section -->
 							<a href="#about">About</a>
 						</li>
-						<li class="page-scroll">
+						<li class="page-scroll"> <!-- Option for documentation section -->
 							<a href="#Documentation">Documentation</a>
 						</li>
-						<li class="page-scroll">
+						<li class="page-scroll"> <!-- Goes to the wiki -->
 							<a href="https://github.com/diondokter/Tscrump-Weather-Station/wiki">Wiki</a>
 						</li>
 					</ul>
@@ -66,11 +66,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<img class="img-responsive" src="../img/profile.png" alt="">
+						<img class="img-responsive" src="../img/profile.png" alt=""> <!-- The main header picture-->
 						<div class="intro-text">
-							<span class="name">Tscrump Weather Station</span>
+							<span class="name">Tscrump Weather Station</span> <!-- Title-->
 							<hr class="star-light">
-							<span class="skills">Make Weather Stations Great Again!</span>
+							<span class="skills">Make Weather Stations Great Again!</span> <!-- Subtitle -->
 						</div>
 					</div>
 				</div>
@@ -94,15 +94,21 @@
 				<ul>
 					<div id="ImageShow" style="width:100%">
 				<ul>
+					<!-- Temperature Graph -->
 					<li><img src="../graphs/GraphTemperature.php"  /></li>
+					<!-- Brightness Graph -->
 					<li><img src="./graphs/GraphBrightness.php"  /></li>
+					<!-- Humidity Graph -->
 					<li><img src="./graphs/GraphHumidity.php"  /></li>
+					<!-- Pressure Graph -->
 					<li><img src="./graphs/GraphPressure.php"  /></li>
 				</ul>
+				<!-- Show's both buttons for next and previous. -->
 			<span class="button prevButton"></span>
 		<span class="button nextButton"></span>
 	</div>
 </center>
+<!-- JavaScript for showing the graph together with the buttons, js make's sure that the buttons are working. -->
 <script src="../js/jquery-1.4.2.min.js"></script>
 	<script>
 		$(window).load(function(){
