--- a/Website/index.html
+++ b/Website/index.html
@@ -42,16 +42,16 @@
 						<li class="hidden">
 							<a href="#page-top"></a>
 						</li>
-						<li class="page-scroll"> <!-- Option for weather section -->
+						<li class="page-scroll">
 							<a href="#weather">Weather</a>
 						</li>
-						<li class="page-scroll"> <!-- Option for about section -->
+						<li class="page-scroll">
 							<a href="#about">About</a>
 						</li>
-						<li class="page-scroll"> <!-- Option for documentation section -->
+						<li class="page-scroll">
 							<a href="#Documentation">Documentation</a>
 						</li>
-						<li class="page-scroll"> <!-- Goes to the wiki -->
+						<li class="page-scroll">
 							<a href="https://github.com/diondokter/Tscrump-Weather-Station/wiki">Wiki</a>
 						</li>
 					</ul>
@@ -66,11 +66,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<img class="img-responsive" src="../img/profile.png" alt=""> <!-- The main header picture-->
+						<img class="img-responsive" src="../img/profile.png" alt="">
 						<div class="intro-text">
-							<span class="name">Tscrump Weather Station</span> <!-- Title-->
+							<span class="name">Tscrump Weather Station</span>
 							<hr class="star-light">
-							<span class="skills">Make Weather Stations Great Again!</span> <!-- Subtitle -->
+							<span class="skills">Make Weather Stations Great Again!</span>
 						</div>
 					</div>
 				</div>
@@ -78,7 +78,7 @@
 		</header>
 
 		<!-- Graph's section. -->
-		<section id="weather" style="Height:1000px">
+		<section id="weather" style="Height:1200px">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 text-center">
@@ -94,21 +94,15 @@
 				<ul>
 					<div id="ImageShow" style="width:100%">
 				<ul>
-					<!-- Temperature Graph -->
 					<li><img src="../graphs/GraphTemperature.php"  /></li>
-					<!-- Brightness Graph -->
 					<li><img src="./graphs/GraphBrightness.php"  /></li>
-					<!-- Humidity Graph -->
 					<li><img src="./graphs/GraphHumidity.php"  /></li>
-					<!-- Pressure Graph -->
 					<li><img src="./graphs/GraphPressure.php"  /></li>
 				</ul>
-				<!-- Show's both buttons for next and previous. -->
 			<span class="button prevButton"></span>
 		<span class="button nextButton"></span>
 	</div>
 </center>
-<!-- JavaScript for showing the graph together with the buttons, js make's sure that the buttons are working. -->
 <script src="../js/jquery-1.4.2.min.js"></script>
 	<script>
 		$(window).load(function(){
@@ -180,26 +174,26 @@
 					</div>
 				</div>
 				<br>
-				<br>
 				<br>	
 				<br>
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2 text-center">
-						<a href="#" class="btn btn-lg btn-outline">
+						<a href="" class="btn btn-lg btn-outline">
 							<i class="fa fa-download"></i> Download Documentation
 						</a>
 					</div>
 				</div>
 			</div>
 			<br>
-			<div class="row">
+				<br>
+				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2 text-center">
 						<a href="https://github.com/diondokter/Tscrump-Weather-Station/wiki" class="btn btn-lg btn-outline">
 							<i class="fa"></i> Go to Wiki
 						</a>
 					</div>
 				</div>
-			<br>
+			
 			<br>
 		</section>
 		
